--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="wrapper">
         <h1>fqkvxq</h1>
+        <p>まず、ものにこだわること。異質なものを見つける。これを結びつけるために、ものをそれぞれ要素分解していく。すると、全然違うものなのに、似た部分や関連したつなぎが見えてくるようになる</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>普通ならざることへの直観能力が笑いである。論理の飛躍になるが、笑いは、普通とは何かを知る経路でもある</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
     </div>
