--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
         <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
     </div>
-    <a href="/link1/"></a>
+    <a href="/link1/">link1</a>
 </body>
 </html>
