--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <img src="./asset/img/header_iphone6.png" alt="" srcset="">
         <h1>fqkvxq</h1>
         <p>まず、ものにこだわること。異質なものを見つける。これを結びつけるために、ものをそれぞれ要素分解していく。すると、全然違うものなのに、似た部分や関連したつなぎが見えてくるようになる</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
@@ -17,6 +18,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
         <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
         <a href="/link1/">link1</a>
+        <img src="./asset/img/footer_iphone6.png" alt="" srcset="">
     </div>
 </body>
 </html>
