--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
         <p>普通ならざることへの直観能力が笑いである。論理の飛躍になるが、笑いは、普通とは何かを知る経路でもある</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
         <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
+        <p>まず、ものにこだわること。異質なものを見つける。これを結びつけるために、ものをそれぞれ要素分解していく。すると、全然違うものなのに、似た部分や関連したつなぎが見えてくるようになる</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>普通ならざることへの直観能力が笑いである。論理の飛躍になるが、笑いは、普通とは何かを知る経路でもある</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
+        <p>まず、ものにこだわること。異質なものを見つける。これを結びつけるために、ものをそれぞれ要素分解していく。すると、全然違うものなのに、似た部分や関連したつなぎが見えてくるようになる</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>普通ならざることへの直観能力が笑いである。論理の飛躍になるが、笑いは、普通とは何かを知る経路でもある</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
+        <p>まず、ものにこだわること。異質なものを見つける。これを結びつけるために、ものをそれぞれ要素分解していく。すると、全然違うものなのに、似た部分や関連したつなぎが見えてくるようになる</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>普通ならざることへの直観能力が笑いである。論理の飛躍になるが、笑いは、普通とは何かを知る経路でもある</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
+        <p>まず、ものにこだわること。異質なものを見つける。これを結びつけるために、ものをそれぞれ要素分解していく。すると、全然違うものなのに、似た部分や関連したつなぎが見えてくるようになる</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>普通ならざることへの直観能力が笑いである。論理の飛躍になるが、笑いは、普通とは何かを知る経路でもある</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptatem natus doloribus dolor minus sunt neque voluptates molestiae laborum. Enim?</p>
+        <p>個性のある人と話すのは楽しい。しかし、それには、こちらも一つの個性を持たなければ、会話が成立しない。人生を豊かにするためには、そういった努力がいる</p>
         <a href="/link1/">link1</a>
     </div>
     <img class="footer" src="./asset/img/footer_iphone6.png" alt="" srcset="">
